added slide in transitions for the progress bar and header. Same for the single-project's starship

--- a/sass/illustrations/_starship.scss
+++ b/sass/illustrations/_starship.scss
@@ -9,7 +9,7 @@
     z-index: -1;
     // animation: translation 8000ms infinite;
 
-    top: 33.5%;
+    bottom: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
