--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -150,7 +150,7 @@ section {
     animation: fade 1200ms steps(1) infinite;
 
     position: absolute;
-    top: 18%;
+    bottom: 85%;
     left: 50%;
     transform: translateX(-50%);
     width: max-content;
