--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,9 +8,20 @@ nav.navigation-bar {
 
     padding: 2rem;
 
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 100;
+
+    animation: 1600ms cubic-bezier(.47,1.64,.41,.8)  0s 1 slideInFromTop;
+
+    @keyframes slideInFromTop {
+        0% {
+            transform: translateY(-150%);
+        }
+        100% {
+            transform: translateY(0);
+        }
+    }
 
     .logo-wrapper {
         width: 5rem;
