--- a/sass/layouts/_progress-bar.scss
+++ b/sass/layouts/_progress-bar.scss
@@ -8,6 +8,17 @@
     flex-flow: row nowrap;
     padding: 0rem 2rem;
 
+    animation: 1600ms cubic-bezier(.47,1.64,.41,.8)  0s 1 slideInFromBottom;
+
+    @keyframes slideInFromBottom {
+        0% {
+            transform: translateY(150%);
+        }
+        100% {
+            transform: translateY(0);
+        }
+    }
+
 
     .altitude-container, .stage-container, .progress-icons {
         display: flex;
