--- a/sass/layouts/_body.scss
+++ b/sass/layouts/_body.scss
@@ -2,6 +2,16 @@ html, body {
     scroll-behavior: smooth;
 }
 
+::-moz-selection { /* Code for Firefox */
+    color: $background-colour;
+    background: $accent-colour;
+  }
+  
+  ::selection {
+    color: $background-colour;
+    background: $accent-colour;
+  }
+
 body {
     background-color: #0a0a0a;
     color: #fff;
