--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,6 +7,7 @@
 body.home {
     background-color: $background-colour;
     position: relative;
+    // overflow: hidden;
 }
 
 body.home:has(.starship-system:hover) .quote {
