--- a/style.css
+++ b/style.css
@@ -465,9 +465,9 @@ button, .launch-project-button, #submitButton {
 
 .project {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row-reverse nowrap;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
   gap: 4rem;
   padding: 1rem 20%;
   width: 100%;
@@ -480,11 +480,6 @@ button, .launch-project-button, #submitButton {
 }
 .project .project-preview-images-wrapper {
   aspect-ratio: 16/9;
-  width: 15rem;
-  position: absolute;
-  top: 50%;
-  right: 5%;
-  transform: translateY(-50%);
   z-index: 1;
   opacity: 0;
   display: none;
@@ -495,38 +490,50 @@ button, .launch-project-button, #submitButton {
 }
 @keyframes floating {
   0% {
-    transform: translate(0px, -50%);
+    transform: translate(0px, -5%);
   }
   50% {
-    transform: translate(0px, -45%);
+    transform: translate(0px, 5%);
   }
   100% {
-    transform: translate(0, -50%);
+    transform: translate(0, -5%);
   }
+}
+.project .project-preview-images-wrapper:hover .preview-image {
+  -webkit-box-shadow: -1px 12px 17px -10px rgba(236, 86, 99, 0.25);
+  box-shadow: -1px 12px 17px -10px rgba(236, 86, 99, 0.25);
 }
 .project .project-preview-images-wrapper .preview-image {
   width: 100%;
   height: 100%;
   background-color: #DEDEDE;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  overflow: hidden;
   transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8) 200ms;
 }
 .project .project-preview-images-wrapper .preview-image:not(.preview-image:first-child) {
-  background-color: tomato;
+  background-color: #0A0A0A;
   position: absolute;
   inset: 0;
   z-index: -1;
 }
 .project .project-preview-images-wrapper:hover .preview-image:last-child {
   transform-origin: bottom left;
-  transform: translate(2rem, -1rem) rotate(-15deg);
+  transform: translate(2rem, -5rem) rotate(-5deg);
 }
 .project .project-preview-images-wrapper:hover .preview-image:nth-child(2) {
   transform-origin: top left;
-  transform: translate(2rem, 1rem) rotate(15deg);
+  transform: translate(2rem, 5rem) rotate(5deg);
+}
+.project .project-inner-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+  justify-content: start;
+  gap: 1rem;
 }
 .project .project-text-container {
-  opacity: 0.5;
+  opacity: 0.2;
 }
 .project .project-text-container .project-link:hover {
   text-decoration: underline;
@@ -534,20 +541,20 @@ button, .launch-project-button, #submitButton {
 .project:hover {
   color: #0A0A0A;
   background-color: #EC5663;
-  padding-left: 22%;
 }
 .project:hover .launch-project-button {
   opacity: 1;
+  display: block;
 }
 .project:hover .project-text-container {
   opacity: 1;
-  transform: translateX(1rem);
 }
 .project .launch-project-button {
   padding: 0.25rem 1rem;
   border-radius: 10rem;
   border: 2px solid #0A0A0A;
   opacity: 0;
+  display: none;
 }
 .project .launch-project-button > * {
   font-size: 1rem;
