--- a/sass/illustrations/_starship.scss
+++ b/sass/illustrations/_starship.scss
@@ -154,3 +154,32 @@
         }
     }
 }
+//END OF STAGE SEPARATION=========
+
+
+// STAGE 2 FLYING OUT=============
+.starship-system {
+
+    .starship-container.flying-out {
+        transform: translate(0%, 100%);
+        animation: stageTwoFlyingOut 2000ms 1;
+
+        @keyframes stageTwoFlyingOut {
+            0% {
+                transform: translate(0%, 100%);
+                rotate: 0deg;
+            }
+            40% {
+                transform: translate(-10%, 120%);
+                rotate: 5deg;
+            }
+            100% {
+                transform: translate(100%, -350%);
+                rotate: 15deg;
+            }
+        }
+    }
+}
+
+
+// END OF STAGE 2 FLYING OUT=============
