--- a/sass/layouts/_progress-bar.scss
+++ b/sass/layouts/_progress-bar.scss
@@ -2,6 +2,7 @@
     position: fixed;
     width: 100%;
     bottom: 2rem;
+    z-index: 101;
 
     display: flex;
     justify-content: space-between;
