--- a/sass/pages/_about-me.scss
+++ b/sass/pages/_about-me.scss
@@ -1,21 +1,109 @@
 body.about-me .main-section {
-    display: grid;
-    grid-template-rows: auto 1fr;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
     gap: 2rem;
 
-    .picture-container {
-        position: relative;
-        width: 20%;
-        justify-self: center;
-        
-        img {
+    position: relative;
+
+    .about-me-title {
+        position: absolute;
+        z-index: -1;
+        font-size: 12rem;
+        top: 5%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        line-height: 0;
+        letter-spacing: 1rem;
+        opacity: 0.25;
+
+        animation-name: myName;
+        animation-duration: 2000ms;
+        animation-iteration-count: 1;
+        animation-timing-function: cubic-bezier(.47,1.64,.41,.8);
+        transform-origin: center left;
+
+        @keyframes myName {
+            0% {
+                top: 80%;
+                opacity: 0;
+                scale: 0.8;
+            }
+            50% {
+                top: 5%;
+                opacity: 0.2;
+                scale: 1;
+            }
+            100% {
+                top: 5%;
+                opacity: 0.25;
+            }
+        }
+    }
+
+    .portrait-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .picture-container {
+            width: 50%;
+            bottom: -120%;
+
+            &::after {
+                content: '';
+                position: absolute;
+                inset: 0;
+                background: linear-gradient(#00000000 60%, $background-colour 100%);
+                z-index: 2;
+            }
+        }
+    }
+
+    .dot-wrapper {
+        position: absolute;
+        left: 15%;
+        z-index: 10;
+
+        &:hover .dot {
+            background-color: $accent-colour;
+            cursor: pointer;
+        }
+
+        &:hover .dot::after {
+            opacity: 1;
+        }
+
+        .dot {
+            width: 2rem;
+            height: 2rem;
+            border: $accent-colour 2px solid;
             border-radius: 50%;
         }
     }
 
-    .text {
-        max-width: 30%;
-        justify-self: center;
+    .dot-wrapper.honest-me {
+        left: 50%;
+        top: 100%;
+        transform: translateX(-50%);
+
+        &::after {
+            content: 'Honest Me';
+            position: absolute;
+            color: $accent-colour;
+            bottom: -120%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            white-space: nowrap;
+            opacity: 0;
+            pointer-events: none;
+        }
+    }
+
+    .dot-wrapper.one-joke {
+        left: 85%;
+        transform: translateX(-50%);
     }
 }
 
@@ -31,4 +119,25 @@ body.about-me .main-section {
         66%  { transform: translate(0%, 2%); }
         100%   { transform: translate(0%, 0%); }    
     }     
+}
+
+body.about-me p {
+    width: 50%;
+}
+
+.main-wrapper{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    padding: 1rem;
+}
+
+.text-wrapper {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
